# investment-analyzer

./: .env.example  .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANNING.md  README.en.md  README.ja.md  README.md  README.zh-HK.md  README.zh-TW.md  TASKS.md  TASKS_DONE.md  claude-progress.txt  main.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/: settings.json
analysis/: __init__.py  portfolio.py  technical.py
api/: __init__.py  app.py  auth.py  claude_runner.py  dependencies.py
backtest/: __init__.py  engine.py  report.py  strategy.py
charts/: __init__.py  generator.py  styles.py
cli/: __init__.py  utils.py
config/: __init__.py  hk_option_multipliers.py  prompts.py  settings.py  users.py  users.yaml  users.yaml.example
db/: __init__.py  database.py  models.py
deploy/: DEPLOY.md  com.dyson.investment-analyzer.plist  env.template  install.sh  nginx-inv.conf
docs/: investment-analyzer-design.md
fetchers/: __init__.py  base.py  futu_fetcher.py  kline_fetcher.py
reports/: __init__.py  generator.py
scripts/: append_ai_recommendations.py  append_coach_to_docx.py  claude_auth_keepalive.sh  cleanup_positions.py  cron_workflow.py  gen_daily_analysis.py  import_csv.py  init_db.py  intraday_monitor.py  migrate_add_alert_columns.py  migrate_add_exchange_rates.py  migrate_add_position_source.py  migrate_add_trading_calendar.py  preflight.py  run-with-proxy.sh  stabilization_check.py  update_docx_conclusion.py  update_hk_option_multipliers.py  update_warrant_ratios.py  v12_scoring.py
services/: __init__.py  alert_service.py  analysis_service.py  chart_service.py  derivative_service.py  dingtalk_service.py  exchange_rate_service.py  export_service.py  intraday_service.py  market_hours.py  plan_service.py  signal_service.py  sync_service.py  trading_calendar_service.py  (+1 more)
(+166 files in other folders)
